Fix credit card form on mobile

--- a/src/screens/Payment/Payment.module.scss
+++ b/src/screens/Payment/Payment.module.scss
@@ -29,3 +29,10 @@
     fill: $titleTextColor;
   }
 }
+
+.priceWidget {
+  display: none;
+  @media screen and (min-width: $breakpoint-mobile) {
+    display: block;
+  }
+}
